# thermal_monitor

./: .gitignore  CMakeLists.txt  README.md  demo_real_hw.cpp  interfaces.h  mainwindow.cpp  mainwindow.h  source_bundle.txt  thermal_monitor.cpp  thermal_monitor.h
c_impl/: CMakeLists.txt  demo_real_hw_c.c  interfaces.h  linux_adapters.c  linux_adapters.h  mock_linux_os_c_adapter.hpp  qt_adapter.cpp  qt_adapter.hpp  thermal_monitor.c  thermal_monitor.h
c_impl/tests/: thermal_monitor_c_test.cpp
docs/: README.md
platform/: linux_like_os.hpp  mock_file.hpp  mock_linux_os.hpp  real_linux_os.hpp
platform/eeprom/: mock_eeprom_file.hpp
platform/gpio/: mock_gpio_value_file.hpp
platform/i2c/: i2c_types.hpp  mock_i2c_bus.hpp  mock_i2c_dev_file.hpp  mock_i2c_peripheral.hpp
platform/soc/: mock_soc.hpp
qemu/: .gitignore  README.md  clean.sh  create-vm-image.sh  launch-vm.sh  meta-data  provision-vm.sh  user-data.template
scripts/: collect_source.py  readme_to_pdf.py  run_qemu_hw_integration.sh
tests/: thermal_monitor_test.cpp
tools/gpio_sysfs_mock/: Makefile  thermal_gpio_mock.c
